...
                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="roundButton" value="YES"/>
                                                        </userDefinedRuntimeAttributes>
                                                        <connections>
                                                            <action selector="digitPressed:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Tmu-0m-HY8"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" tag="11" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IHa-5E-F5t" customClass="RoundButton" customModule="HexaCalc" customModuleProvider="target">
                                                        <rect key="frame" x="177.66666666666669" y="0.0" width="30" height="49"/>
                                                        <color key="backgroundColor" systemColor="viewFlipsideBackgroundColor"/>
                                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="27"/>
                                                        <state key="normal" title="B">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ii9-LZ-xrx" customClass="RoundButton" customModule="HexaCalc" customModuleProvider="target">
                                                        <rect key="frame" x="38.666666666666671" y="0.0" width="37" height="53"/>
                                                        <color key="backgroundColor" systemColor="viewFlipsideBackgroundColor"/>
                                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="30"/>
                                                        <state key="normal" title="00">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="roundButton" value="YES"/>
                                                        </userDefinedRuntimeAttributes>
                                                        <connections>
...
                                                </subviews>
                                            </stackView>
                                        </subviews>
                                    </stackView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" minimumScaleFactor="0.20000000000000001" translatesAutoresizingMaskIntoConstr
                                        <rect key="frame" x="-202" y="367.66666666666669" width="818" height="27.333333333333314"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Binary Output Label" label="binaryOutputLabel"/>
                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <navigationBar contentMode="scaleToFill" fixedFrame="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xK1-KZ-eDg">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
...
                            <constraint firstItem="HKc-mO-UCF" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" id="aVR-RW-4WE"/>
                            <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="HKc-mO-UCF" secondAttribute="bottom" id="alG-PE-2Gp"/>
                            <constraint firstItem="HKc-mO-UCF" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" id="obL-ub-Bjo"/>
                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="HKc-mO-UCF" secondAttribute="trailing" id="t2U-vS-EVp"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Binary" image="01.square" catalog="system" id="cPa-gy-q4n"/>
                    <connections>
                        <outlet property="ACBtn" destination="SKC-3T-8cx" id="jji-GA-O2t"/>
                        <outlet property="ANDBtn" destination="Uxe-EP-a1f" id="xEz-aX-b8k"/>
                        <outlet property="Btn0" destination="uZk-z6-Dqu" id="Xwa-IR-LjI"/>
                        <outlet property="Btn00" destination="ii9-LZ-xrx" id="CFt-kz-83S"/>
                        <outlet property="Btn1" destination="Gl7-nE-VdG" id="wRq-pC-heN"/>
...
